--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link href="template/css/style.css" rel="stylesheet">
 </head>
 <body>
-    
+
+<div class="wrapper">
 <!-- Start Panel -->
     <div class="story-panel" id="start">
         <div class="story-panel--text">
@@ -275,6 +276,6 @@
         </nav>
     </div>
 </div>
-
+</div>
 </body>
 </html>
