more mobile stuff

--- a/index.html
+++ b/index.html
@@ -105,11 +105,13 @@
         <p>You climb your way outside of the cupboard and stand up to look around. You notice a door. You didn’t see a door there before. You approach the door and open it.</p>
         <p>It is pretty outside the door. It’s almost as if it leads you to a different dimension. It was freedom compared to this hellish game of hide and seek. You choose to go into the door and close it behind you. You are free.</p>
 
+        <div class="relative">
         <div class="EndCupboardGood">
             <img class="KitchenFreedom" src="template/images/Kitchen_Freedom.png" alt="Drawn image of a green meadow and blue sky.">
 
             <img class="KitchenDoor" src="template/images/KitchenDoor.png" alt="Drawn creepy image of a tiled floor and door frame.">
         </div>
+    </div>
 
         <h3>Ending 2 of 6, you win.</h3>
         <nav>
